test/error/LexLiteralHexOverflow.ci
public static class Test
{
	public static bool Run()
	{
		long a = 0x123456789012345678901234567890; //ERROR: Hex number too big
		return true;
	}
}
